--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -1,4 +1,4 @@
-name: autoformat
+name: autoformat-and-lint
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     branches: ["main"]
   
 jobs:
-  build:
+  format-and-lint:
 
     runs-on: ubuntu-latest
 
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up python 3.12
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: "3.12"
       
@@ -28,3 +28,9 @@ jobs:
     - name: Format with black
       run: black **.py
       continue-on-error: true
+
+    - name: Install ruff
+      run: python -m pip install ruff
+    
+    - name: Lint with ruff
+      run: ruff check --fix
