--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     {name = "jedrzej-grabski", email = "jedrzej@grabski.pl"},
     {name = "mbienkowski", email = "bienkowski.maksym@gmail.com"}
 ]
-dependencies = []
+dependencies = [
+    "typer>=0.11.0",
+]
 requires-python = ">=3.12"
 readme = "README.md"
 license = {text = "MIT"}
@@ -19,3 +21,6 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[project.entry-points."console_scripts"]
+skibidi-orm = "skibidi_orm.cli.run:main"
