--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -26,7 +26,7 @@ jobs:
         pip install black
 
     - name: Format with black
-      run: black **.py
+      run: black */**.py
       continue-on-error: true
 
     - name: Install ruff
