--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 ]
 dependencies = [
     "typer>=0.11.0",
+    "colorama>=0.4.6",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
@@ -26,5 +27,9 @@ distribution = true
 dev = [
     "pytest>=8.1.1",
 ]
+
+[tool.pdm.scripts]
+tests = "pytest --verbose --color=yes"
+
 [project.entry-points."console_scripts"]
 skibidi-orm = "skibidi_orm.cli.run:main"
