--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,8 @@ distribution = true
 test = [
     "pytest>=8.1.1",
 ]
+dev = [
+    "pyright>=1.1.358",
+]
 [project.entry-points."console_scripts"]
 skibidi-orm = "skibidi_orm.cli.run:main"
