--- a/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/tsconfig.json
+++ b/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/tsconfig.json
@@ -18,7 +18,15 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Added stuff */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
