--- a/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
+++ b/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.2",
+    "@tanstack/react-router": "^1.33.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
