--- a/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
+++ b/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.2",
     "@tanstack/react-router": "^1.33.4",
+    "ag-grid-community": "^31.3.2",
     "ag-grid-react": "^31.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
