--- a/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
+++ b/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-resizable-panels": "^2.0.19",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
