--- a/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
+++ b/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.2",
