--- a/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
+++ b/src/skibidi_orm/migration_engine/studio/skibidi-orm-studio-frontend/package.json
@@ -16,12 +16,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.36.2",
     "@tanstack/react-router": "^1.33.4",
+    "ace-builds": "^1.33.2",
     "ag-grid-community": "^31.3.2",
     "ag-grid-react": "^31.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
+    "react-ace": "^11.0.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
