--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ authors = [
 dependencies = [
     "typer>=0.11.0",
     "colorama>=0.4.6",
+    "python-dotenv>=1.0.1",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
