--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "typer>=0.11.0",
     "colorama>=0.4.6",
     "python-dotenv>=1.0.1",
+    "freezegun>=1.5.1",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
