--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "typer>=0.11.0",
     "colorama>=0.4.6",
     "fastapi>=0.111.0",
+    "psycopg2-binary>=2.9.9",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
@@ -34,3 +35,8 @@ tests = "pytest --verbose --color=yes --ignore ./tmp"
 
 [project.entry-points."console_scripts"]
 skibidi-orm = "skibidi_orm.cli.run:main"
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: mark test as slow (deselect with '-m \"not slow\"')",
+]
