--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,10 +2,10 @@ name: publish
 
 on:
   push:
-    branches: ["**"]
+    branches: ["main"]
 
   pull_request:
-    branches: ["**"]
+    branches: ["main"]
 
 jobs:
     pypi-publish:
