--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "colorama>=0.4.6",
     "fastapi>=0.111.0",
     "psycopg2-binary>=2.9.9",
+    "tox>=4.15.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
