changed branch scope to all for tox-tests

--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -2,11 +2,10 @@ name: Python Package Test with Tox
 
 on:
   push:
-    branches:
-      - main
+    branches: ["**"]
+
   pull_request:
-    branches:
-      - main
+    branches: ["**"]
 
 jobs:
   tox-tests:
