Changed command in tox.ini to run pytest command defined in pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -3,10 +3,10 @@ envlist = py3120, py3121, py3122, py3123
 isolated_build = true
 
 [testenv]
-allowlist_externals = pdm, pytest
+allowlist_externals = pdm
 commands =
     pdm install
-    pytest tests/ -s --ignore tests/skibidi-orm/migration_engine/test_module_cooperation.py --ignore tests/skibidi-orm/migration_engine/db_inspector/ --ignore tests/skibidi-orm/migration_engine/db_config/ -m "not slow"
+    pdm run tests
 
 [testenv:py3120]
 basepython = python3.12.0
