--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ authors = [
 dependencies = [
     "typer>=0.11.0",
     "pydantic>=2.7.0",
+    "tox>=4.15.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
