Changed version on pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,17 @@
 [project]
 name = "SkiBiDi-ORM"
-version = "0.1.21"
+version = "0.1.25"
 description = "Python ORM"
 authors = [
     {name = "xDepcio", email = "olek.drwal@gmail.com"},
-    {name = "jedrzej-grabski", email = "jedrzej@grabski.pl"},
+    {name = "jedrzej-grabski", email = "grabski.dev@gmail.com"},
     {name = "mbienkowski", email = "bienkowski.maksym@gmail.com"}
 ]
 dependencies = [
     "typer>=0.11.0",
     "colorama>=0.4.6",
     "fastapi>=0.111.0",
+    "black>=24.4.2",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
