--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+develop-eggs/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -9,7 +10,6 @@ __pycache__/
 # Distribution / packaging
 .Python
 build/
-develop-eggs/
 downloads/
 eggs/
 .eggs/
@@ -161,3 +161,5 @@ cython_debug/
 .vscode
 .pdm-python
 tmp/
+
+*/migrations/migration.py
