--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-envlist = py312
+envlist = py3120, py3121, py3122
 
 [testenv]
-deps = pytest
-commands = pytest
+deps = pdm
+commands_pre = pdm install --dev
+commands = pdm run pytest
